springboot-demo-secure.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: springboot-demo-secure
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: springboot-demo-secure
  name: springboot-demo-secure-blue
  namespace: springboot-demo-secure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-demo-secure
      group: blue
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: springboot-demo-secure
        group: blue
    spec:
      containers:
      - image: docker-registry:5000/springboot-demo-secure:blue
        name: springboot-demo-secure
        resources: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: springboot-demo-secure
  name: springboot-demo-secure-green
  namespace: springboot-demo-secure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-demo-secure
      group: green
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: springboot-demo-secure
        group: green
    spec:
      containers:
      - image: docker-registry:5000/springboot-demo-secure:green
        name: springboot-demo-secure
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: springboot-demo-secure
  name: springboot-demo-secure-svc
  namespace: springboot-demo-secure
spec:
  ports:
  - name: https
    port: 8444
    protocol: TCP
    targetPort: 8443
#    nodePort: 30445
  selector:
    app: springboot-demo-secure
  type: ClusterIP
#  type: NodePort
status:
  loadBalancer: {}
---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  annotations:
#    ingress.kubernetes.io/balance-algorithm: roundrobin
#    ingress.kubernetes.io/blue-green-deploy: group=blue=1,group=green=1
#    ingress.kubernetes.io/blue-green-mode: pod
#    ingress.kubernetes.io/ssl-redirect: "false"
#  name: springboot-demo-ing
#  namespace: springboot-demo-secure
#spec:
#  tls:
#    - secretName: springboot-demo/tls-secret 
#  rules:
#  - http:
#      paths:
#      - backend:
#          serviceName: springboot-demo-svc
#          servicePort: 443
#        path: /actuator/health
#      paths:
#      - backend:
#          serviceName: springboot-demo-svc
#          servicePort: 443
#        path: /blue-green-demo
