springboot-demo-spinnaker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: springboot-demo-secure
  name: springboot-demo-secure-blue
  namespace: springboot-demo-secure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-demo-secure
      group: blue
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: springboot-demo-secure
        group: blue
    spec:
      containers:
      - image: docker-registry:5000/springboot-demo-secure-prometheus:GIT_COMMIT_ID
        name: springboot-demo-secure
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: springboot-demo-secure
  name: springboot-demo-secure-svc
  namespace: springboot-demo-secure
spec:
  ports:
  - name: metrics
    port: 8444
    protocol: TCP
    targetPort: 8443
  selector:
    app: springboot-demo-secure
  type: ClusterIP
status:
  loadBalancer: {}
---
