springboot-demo-ing-helm.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: springboot-demo-secure-ing
  namespace: springboot-demo-secure
spec:
  rules:
    - host: 
      http:
        paths:
          - backend:
              serviceName: springboot-demo-secure-svc
              servicePort: 8444
            path: /demo-secure
